--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,19 +25,20 @@ div#contenu
 
 div#contenu h2
 {
-	margin-left: 15px ;
 	padding-left: 5px ;
 	border-bottom: 1px solid #52616a;
 	border-left: 3px solid #52616a;
-	color: black ;
+	color: black;
+  height: 50px;
 }
 
 div#contenu p
 {
-	text-align: center;
+  display: block;
+  justify-content: center;
 	text-indent: 2em ;
 	line-height: 1.7em ;
-  height: 100px;
+  height: 200px;
 }
 
 ul#menu
@@ -68,6 +69,11 @@ ul#menu li a
   border-left: 1px solid black;
 }
 
+ul#menu li a:hover
+{
+	background-color: red repeat-x 0 0 ;
+}
+
 p#footer
 {
 	margin: 8px ;
@@ -89,15 +95,38 @@ nav
  list-style-type: none;
 }
 
+
+td
+{
+    border: 1px solid black;
+}
+
+table
+{
+    border-collapse: collapse;
+
+}
+
+td, th /* Mettre une bordure sur les td ET les th */
+{
+    border: 1px solid black;
+}
+
+legend{
+  font-size: 25px;
+  color: red;
+}
+
+
 @media screen and (max-width: 800px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
+    .conteneur.responsive {position: relative;}
+    .conteneur.responsive .icon {
         position: absolute;
         right: 0;
         top: 0;
 
     }
-    .topnav.responsive a {
+    .conteneur.responsive a {
            float: none;
            display: block;
            text-align: left;
@@ -109,7 +138,7 @@ nav
            font-size: 2.5em;
        }
 
-       .accueil{
+       .body{
            flex-direction: column;
            margin: 7px;
            margin-top: 0%;
