--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,9 +57,9 @@ ul#menu li
 
 ul#menu li a
 {
-	width: 300px ;
+	width: 200px ;
 	line-height: 30px ;
-	font-size: 1.2em ;
+  /*font-size: 1.2em ;*/
 	font-weight: bold ;
 	letter-spacing: 2px ;
 	color: black ;
@@ -116,49 +116,3 @@ legend{
   font-size: 25px;
   color: red;
 }
-
-
-@media screen and (max-width: 800px) {
-    .conteneur.responsive {position: relative;}
-    .conteneur.responsive .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-
-    }
-    .conteneur.responsive a {
-           float: none;
-           display: block;
-           text-align: left;
-           padding: 7px 50px;
-       }
-
-       #logo{
-           float: left;
-           font-size: 2.5em;
-       }
-
-       .body{
-           flex-direction: column;
-           margin: 7px;
-           margin-top: 0%;
-       }
-
-       .chef img{
-           width: 145px;
-           float: right;
-       }
-
-       #infos, #rs{
-           font-size: 0.73em;
-           margin: 0 15px;
-       }
-
-       img{
-           max-height: 200px;
-       }
-
-       #top{
-           max-height: 40px;
-       }
-   }
