--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,73 +5,37 @@ body
   text-align: center ;
 }
 
-#imageHaut{
+.title
+{
+  color: green;
+}
+
+.sous-title
+{
+  color: green;
+}
+
+.title-page
+{
+  color: green;
+}
+
+#imageHaut
+{
   width: 100%;
-  height: 330px;
-
+  height: 100%;
 }
 
-div#conteneur
+#image-photo
 {
-  margin: 0 auto ;
-  text-align: center;
-	background: white ;
-}
-
-div#contenu
-{
-	padding: 0 70px 0 82px ;
-}
-
-div#contenu h2
-{
-	padding-left: 5px ;
-	border-bottom: 1px solid #52616a;
-	border-left: 3px solid #52616a;
-	color: black;
-  height: 50px;
-}
-
-div#contenu p
-{
-  display: block;
+  display: contents;
   justify-content: center;
-	text-indent: 2em ;
-	line-height: 1.7em ;
-  height: 200px;
 }
 
-ul#menu
+.btn.btn-success.pull-left
 {
-	height: 100px ;
-	margin: 0 ;
-	padding: 0 ;
-	list-style-type: none ;
-}
-
-ul#menu li
-{
-	float: left ;
-	text-align: center ;
-}
-
-ul#menu li a
-{
-	width: 200px ;
-	line-height: 30px ;
-  /*font-size: 1.2em ;*/
-	font-weight: bold ;
-	letter-spacing: 2px ;
-	color: black ;
-	display: block ;
-	text-decoration: none ;
-  border-right: 1px solid black;
-  border-left: 1px solid black;
-}
-
-ul#menu li a:hover
-{
-	background-color: red repeat-x 0 0 ;
+  margin-top: -82px;
+  margin-left: 987px;
 }
 
 p#footer
@@ -88,31 +52,104 @@ nav
   justify-content: space-around;
 }
 
-#contact ul li
+.contact ul li
 {
- display: flex;
- justify-content: center;
- list-style-type: none;
+   display: flex;
+   justify-content: center;
+   list-style-type: none;
 }
 
+.nav li a
+{
+  color: black;
+}
+
+.nav li a:hover
+{
+  color: green;
+}
+
+.nav.nav-tabs.nav-tabs-justified a:hover
+{
+  border-color: green;
+}
+
+.title-table
+{
+  text-align: center;
+}
 
 td
 {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
 table
 {
-    border-collapse: collapse;
-
+  border-collapse: collapse;
 }
 
-td, th /* Mettre une bordure sur les td ET les th */
+td, th
 {
-    border: 1px solid black;
+  border: 1px solid black;
 }
 
-legend{
-  font-size: 25px;
-  color: red;
+
+/***
+/* Media Queries
+***/
+/** 1200px **/
+@media (max-width: 1200px) {
+  .btn.btn-success.pull-left {
+      margin-top: -82px;
+      margin-left: 990px;
+  }
+}
+
+
+/** >992px **/
+@media (min-width: 992px) {
+  .btn.btn-success.pull-left {
+      margin-top: -82px;
+      margin-left: 789px;
+  }
+}
+
+/** 991px **/
+@media (max-width: 991px) {
+  .btn.btn-success.pull-left {
+    margin-top: -82px;
+    margin-left: 568px;
+}
+}
+
+/** 768px **/
+@media (max-width: 768px) {
+
+
+}
+
+/** 767px **/
+@media (max-width: 767px) {
+  .btn.btn-success.pull-left {
+      margin-top: -82px;
+      margin-left: 584px;
+  }
+}
+
+/** 575px **/
+@media (max-width: 575px) {
+  .btn.btn-success.pull-left {
+    margin-top: -37px;
+    margin-left: -2px;
+}
+}
+
+/** 480px **/
+/*@media (max-width: 480px) {
+}*/
+
+/** 360px **/
+@media (max-width: 360px) {
+
 }
