--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,29 +1,30 @@
 body
 {
-  margin: 0px 0 ;
-  padding: 0 ;
+  padding: 15px;
   text-align: center ;
 }
 
 .title
 {
-  color: green;
+  color: #747474;
 }
 
 .sous-title
 {
-  color: green;
+  color: #747474;
 }
 
 .title-page
 {
-  color: green;
+  color: #747474;
+}
+#image {
+    margin-left: 558px;
 }
 
 #imageHaut
 {
-  width: 100%;
-  height: 100%;
+  width: 15%;
 }
 
 #image-photo
@@ -32,18 +33,12 @@ body
   justify-content: center;
 }
 
-.btn.btn-success.pull-left
-{
-  margin-top: -82px;
-  margin-left: 987px;
+.btn.btn-success.pull-right {
+    margin-right: 107px;
 }
 
-p#footer
-{
-	margin: 8px ;
-	padding-right: 10px ;
-	text-align: right ;
-	color: black;
+.contact {
+    width: 94%;
 }
 
 nav
@@ -59,7 +54,7 @@ nav
    list-style-type: none;
 }
 
-.nav li a
+/*.nav li a
 {
   color: black;
 }
@@ -72,7 +67,7 @@ nav
 .nav.nav-tabs.nav-tabs-justified a:hover
 {
   border-color: green;
-}
+}*/
 
 .title-table
 {
@@ -94,62 +89,146 @@ td, th
   border: 1px solid black;
 }
 
-
-/***
-/* Media Queries
-***/
-/** 1200px **/
-@media (max-width: 1200px) {
-  .btn.btn-success.pull-left {
-      margin-top: -82px;
-      margin-left: 990px;
-  }
+/** {
+    box-sizing: border-box;
+    outline: none;
 }
 
 
-/** >992px **/
-@media (min-width: 992px) {
-  .btn.btn-success.pull-left {
-      margin-top: -82px;
-      margin-left: 789px;
-  }
+
+#logo, nav, li {
+    display: inline-block;
 }
 
-/** 991px **/
-@media (max-width: 991px) {
-  .btn.btn-success.pull-left {
-    margin-top: -82px;
-    margin-left: 568px;
-}
+nav {
+    display: inline-block;
+    line-height: 60px;
+    vertical-align: top;
 }
 
-/** 768px **/
-@media (max-width: 768px) {
-
-
+ul {
+    margin-bottom: 50px;
 }
 
-/** 767px **/
-@media (max-width: 767px) {
-  .btn.btn-success.pull-left {
-      margin-top: -82px;
-      margin-left: 584px;
-  }
+li {
+    margin-left: 32px;
+}
+li a, .button {
+    text-decoration: none;
+    color: #333;
+}
+.contact {
+    width: 94%;
 }
 
-/** 575px **/
-@media (max-width: 575px) {
-  .btn.btn-success.pull-left {
-    margin-top: -37px;
-    margin-left: -2px;
+.button-sign-up, .button-sign-in{
+    text-transform: uppercase;
+    float: right;
+    margin-top: -16px;
+    line-height: 84px;
+    height: 84px;
+    text-decoration: none;
+    padding: 0 16px;
 }
+.button-sign-up {
+    background-color: #EEE;
 }
 
-/** 480px **/
-/*@media (max-width: 480px) {
+#global {
+    position: absolute;
+    z-index: -10;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../images/background.png) center;
+    background-size: cover;
+}
+
+
+
+#hamburger, #hamburger-content {
+    display: inline;
+}
+
+#hamburger-button {
+    display: none;
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 30px;
+    vertical-align: top;
+    padding: 0;
+    line-height: 47px;
+    float: right;
+    margin-right: 32px;
+}
+
+#hamburger-overlay {
+    display: none;
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, .4);
+}
+
+#hamburger-sidebar {
+    display: none;
+    position: fixed;
+    width: 84%;
+    z-index: 20;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #FFF;
+    overflow-y: auto;
+    transform: translateX(-100%);
+    transition: transform .2s ease-out;
+}
+#hamburger-sidebar li {
+    display: block;
+}
+
+#hamburger-sidebar-body {
+    padding: 16px 8px;
+}
+#hamburger-sidebar-body li:before {
+    content: ' ';
+    display: inline-block;
+    vertical-align: middle;
+    margin-bottom: 4px;
+    margin-right: 16px;
+    width: 24px;
+    height: 24px;
+}
+#hamburger-sidebar-body .button {
+    margin-top: 16px;
+    text-align: center;
+    float: none;
+    display: block;
+    height: auto;
+    line-height: inherit;
+    padding: 10px;
+}
+
+@media screen and (max-width: 1024px) {
+    h1 {
+        font-size: 42px;
+        line-height: 56px;
+    }
+
+    #hamburger-content {
+        display: none;
+    }
+
+    #hamburger-button, #hamburger-sidebar,
+    .hamburger-activated #hamburger-overlay {
+        display: block;
+    }
+
+    .hamburger-activated #hamburger-sidebar {
+        transform: translateX(0);
+    }
 }*/
-
-/** 360px **/
-@media (max-width: 360px) {
-
-}
